# Meridian

./: .gitignore  .mcp.json  MISSION.md  README.md  context.md  index.html  package-lock.json  package.json  pyproject.toml  read-check-report.md  tmp_polaris_homepage.html  tmp_v2_salvage_test_fix.patch
bifrost/: cockpit.py
docs/: FileMap.md  aegis-promptpacket-proof-policy-checklist.md  aegis-relay-summary-handoff-contract.md  agentic-ai-framework-checklist.md  bifrost-cockpit-queue-status-brief.md  bifrost-configurable-progress-surface-brief.md  bifrost-preview-package-api-note.md  bifrost-session-queue-activation-brief.md  bifrost-v2-cockpit-extensions.md  build-1-codex-check-handoff.md  build-1-filemap-knowledge-tracker-handoff.md  build-2-review-console-handoff.md  build-next-aegis-cross-check-handoff.md  build-session-polling-bootstrap.md  claude-initial-build-handoff.md  cockpit-ui-architecture.md  cross-check-aegis-integration-brief.md  deepseek-candidate-trust-metadata-implementation-checklist.md  graphiti-sidecar-contract.md  jarvis-ui-source-assessment.md  live-build-1.md  live-build-2.md  live-build-3.md  live-build-4.md  live-build-5.md  live-build-queue-hygiene.md  live-codex-reviews-2.md  live-codex-reviews-3.md  live-codex-reviews.md  main-write-coordination-handoff.md  main-write-coordination-ledger.md  meridian-capabilities-architecture-map.md  meridian-capabilities.md  meridian-pillars.md  meridian-provider-compliance.md  meridian-ui-authority.md  meridian-v0-build-brief.md  model-harness-metadata-implementation-checklist.md  (+39 more)
electron/: main.js
(+93 files in other folders)
